<resources>
    <string name="app_name">Random Seat Arrangement</string>
    <string name="title_history">History</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>

    <!--Image descriptions-->
    <string name="description_gradient_image" translatable="false">gradient_image</string>
    <string name="description_check_image" translatable="false">check_image</string>
    <string name="description_drag_icon" translatable="false">drag_icon</string>
    <string name="description_splash_background" translatable="false">splash_background</string>
    <string name="description_splash_foreground" translatable="false">splash_foreground</string>
    <string name="description_virtual_actionbar" translatable="false">virtual_actionbar</string>
    <string name="description_back_button" translatable="false">back_button</string>
    <string name="description_save_button" translatable="false">save_button</string>

    <string name="row">Row :" "</string>
    <string name="column">Column :" "</string>
    <string name="next">Next</string>
    <string name="show_all">Show All</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="number_of_seats">Number of seats :" "</string>
    <string name="use_seat">I don\'t use this seat</string>
    <string name="fix_seat">fix this seat\'s number to</string>
    <string name="seat_settings">Seat settings</string>
    <string name="none">Not selected</string>
    <string name="store_not_found">Unable to find an app in the store.</string>
    <string name="etc">ETC</string>
    <string name="review_title">Are you using the app well?</string>
    <string name="review_message">Pleas leave a review on the store. Reviews are a great help for developers!</string>
    <string name="review_no">You can leave a review again at the setting.</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="email_title">To : The developer of \'Random Seat Arrangement\'</string>
    <string name="update_available">Update available</string>
    <string name="update_not_available">There is no update available.</string>
    <string name="connect_failed">Connect failed</string>
    <string name="show">SHOW</string>
    <string name="caution">Caution! If you change row or column below, the setting of each seat will be deleted.</string>
    <string name="show_all_helper">Click each seat to see a single number, or click the button below to view all of them.</string>
    <string name="item_deleted">An item deleted.</string>
    <string name="undo">Undo</string>
    <string name="ok">OK</string>
    <string name="screenshot">Screenshot</string>
    <string name="save_to_history">Save to history</string>
    <string name="title">Title</string>
    <string name="description">Description(optional)</string>
    <string name="text_over_error">Characters are too long.</string>
    <string name="text_short_error">Characters are too short.</string>

    <!--Preference fragment-->
    <string name="use_seatNumber">Use seat number</string>
    <string name="use_seatNumber_key" translatable="false">use_seat_number</string>
    <string name="row_seat_number">Row seat number</string>
    <string name="column_seat_number">Column seat number</string>
    <string name="row_seat_number_key" translatable="false">row_seat_number</string>
    <string name="column_seat_number_key" translatable="false">column_seat_number</string>
    <string-array name="number_or_alphabet_array">
        <item>Number</item>
        <item>Alphabet</item>
    </string-array>
    <string name="number">Number</string>
    <string name="alphabet">Alphabet</string>
    <string name="review">Leave a review on the store</string>
    <string name="review_key" translatable="false">review</string>
    <string name="reset_count_key" translatable="false">reset_count</string>
    <string name="send_email">Send an email to the developer</string>
    <string name="send_email_key" translatable="false">send_email</string>
    <string name="check_update">Check for update</string>
    <string name="check_update_key" translatable="false">check_update</string>
    <string name="seat_appearance">Seat appearance</string>
    <string name="seat_width">Width</string>
    <string name="seat_height">Height</string>
    <string name="seat_text_size">Text size</string>
    <string name="seat_appearance_key" translatable="false">seat_appearance</string>
    <string name="seat_width_key" translatable="false">seat_width</string>
    <string name="seat_height_key" translatable="false">seat_height</string>
    <string name="seat_text_size_key" translatable="false">seat_text_size</string>

    <!--AD-->
    <string name="app_id" translatable="false">ca-app-pub-5515754850171812~9384149471</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-5515754850171812/4570806491</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-5515754850171812/7743764746</string>
</resources>
