<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:padding="16dp"
        android:text="@string/detail_setting"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/use_seat_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="8dp"
        android:text="@string/use_seat" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">

        <CheckBox
            android:id="@+id/fix_seat_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fix_seat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/number_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="@id/fix_seat_checkBox"
            app:layout_constraintStart_toEndOf="@id/fix_seat_checkBox"
            app:layout_constraintTop_toTopOf="@id/fix_seat_checkBox">

        </Spinner>
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        android:paddingEnd="24dp"
        android:paddingBottom="12dp"
        android:text="@string/ok"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />
</LinearLayout>