<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="24dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ImageView
        android:id="@+id/drag_image"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="@drawable/top_rounded_square"
        android:contentDescription="@string/description_drag_icon"
        app:srcCompat="@drawable/ic_round_drag_handle_24px" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/setting_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/androidWhite"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/number_of_seats_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/number_of_seats"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/caution_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/caution" />

            <com.warkiz.widget.IndicatorStayLayout
                android:id="@+id/indicator_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <com.warkiz.widget.IndicatorSeekBar
                    android:id="@+id/row_seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:isb_indicator_color="@color/colorPrimary"
                    app:isb_indicator_text_color="@android:color/white"
                    app:isb_max="20"
                    app:isb_min="1"
                    app:isb_progress="5"
                    app:isb_seek_smoothly="true"
                    app:isb_show_indicator="rounded_rectangle"
                    app:isb_show_tick_marks_type="divider"
                    app:isb_thumb_color="@color/colorPrimary"
                    app:isb_tick_marks_color="@color/colorPrimary"
                    app:isb_ticks_count="20"
                    app:isb_track_progress_color="@color/colorPrimary" />

                <com.warkiz.widget.IndicatorSeekBar
                    android:id="@+id/column_seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:isb_indicator_color="@color/colorPrimary"
                    app:isb_indicator_text_color="@android:color/white"
                    app:isb_max="20"
                    app:isb_min="1"
                    app:isb_progress="6"
                    app:isb_seek_smoothly="true"
                    app:isb_show_indicator="rounded_rectangle"
                    app:isb_show_tick_marks_type="divider"
                    app:isb_thumb_color="@color/colorPrimary"
                    app:isb_tick_marks_color="@color/colorPrimary"
                    app:isb_ticks_count="20"
                    app:isb_track_progress_color="@color/colorPrimary" />
            </com.warkiz.widget.IndicatorStayLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_square_button">

                <ImageView
                    android:id="@+id/stage_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="12dp"
                    android:contentDescription="@string/description_check_image"
                    app:srcCompat="@drawable/ic_baseline_check_24px"
                    android:tint="@android:color/white" />

                <TextView
                    android:id="@+id/stage_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/next"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>